--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,15 @@ body {
   margin: 20px 0;
 }
 
+/**
+ * card
+ */
+
+.card {
+  margin: 0 auto;
+  padding: 15px;
+  background: white;
+  max-width: 720px;
+  border-radius: 6px;
+  box-shadow: 0 1px 2px rgba(0,0,0,.1);
+}
