--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,12 @@ body {
   border-radius: 6px;
   box-shadow: 0 1px 2px rgba(0,0,0,.1);
 }
+
+/**
+ * color overrides
+ */
+
+.form-control:focus {
+  border-color: #9da600;
+  box-shadow: 0 0 0 1px #9da600;
+}
