--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,3 +24,15 @@ body {
   border-color: #9da600;
   box-shadow: 0 0 0 1px #9da600;
 }
+
+.btn {
+  background: #9da600;
+  border-color: #9da600;
+}
+
+.btn:hover,
+.btn:focus,
+.btn:active {
+  background: #565a00 !important;
+  border-color: #565a00 !important;
+}
