--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,3 +36,15 @@ body {
   background: #565a00 !important;
   border-color: #565a00 !important;
 }
+
+/**
+ * margin helpers
+ */
+
+.margin { margin: 40px !important; }
+.margin-none { margin: 0 !important; }
+
+.margin-top { margin-top: 40px!important; }
+.margin-right { margin-right: 40px!important; }
+.margin-bottom { margin-bottom: 40px!important; }
+.margin-left { margin-left: 40px!important; }
